Fix: Correct Generator and Local-Whisper project descriptions from GitHub

--- a/index.html
+++ b/index.html
@@ -303,18 +303,19 @@
           </div>
         </div>
 
-        <!-- Generator -->
+        <!-- FastAPI Full-Stack Generator -->
         <div class="project-card">
           <div class="project-image">
-            <img src="./assets/img/app_start.gif" alt="Generator - AI Content Tool">
+            <img src="./assets/img/app_start.gif" alt="FastAPI Full-Stack Generator CLI Tool">
           </div>
           <div class="project-content">
-            <h3 class="project-title">Generator</h3>
-            <p class="project-description">Automated content generation using GPT models for SEO-optimized articles and marketing content with workflow automation.</p>
+            <h3 class="project-title">FastAPI Full-Stack Generator</h3>
+            <p class="project-description">Production-ready CLI tool to scaffold FastAPI applications with database integration (PostgreSQL, MongoDB), authentication (JWT, OAuth), AI frameworks (LangChain, PydanticAI), Next.js frontend, and DevOps configs (Docker, K8s).</p>
             <div class="project-tech">
               <span>Python</span>
-              <span>OpenAI</span>
-              <span>Automation</span>
+              <span>FastAPI</span>
+              <span>CLI</span>
+              <span>DevOps</span>
             </div>
             <div class="project-links">
               <a href="https://github.com/AhmedRaoofuddin/Generator" target="_blank" class="btn-sm"><i class="fa-brands fa-github"></i> View Code</a>
@@ -364,18 +365,19 @@
           </div>
         </div>
 
-        <!-- Local Whisper -->
+        <!-- On-Device Sage (Local Whisper) -->
         <div class="project-card">
           <div class="project-image">
-            <img src="./assets/img/App_Development.gif" alt="Local Whisper Speech-to-Text">
+            <img src="./assets/img/App_Development.gif" alt="On-Device Sage - Offline LLM Mobile App">
           </div>
           <div class="project-content">
-            <h3 class="project-title">Local Whisper</h3>
-            <p class="project-description">Local speech-to-text transcription using OpenAI Whisper model, enabling offline audio processing with high accuracy.</p>
+            <h3 class="project-title">On-Device Sage</h3>
+            <p class="project-description">Privacy-first mobile app running large language models entirely offline on-device (Android & iOS). Powered by llama.cpp for local AI inference without internet dependency.</p>
             <div class="project-tech">
               <span>TypeScript</span>
-              <span>Whisper</span>
-              <span>Speech-to-Text</span>
+              <span>React Native</span>
+              <span>llama.cpp</span>
+              <span>Mobile</span>
             </div>
             <div class="project-links">
               <a href="https://github.com/AhmedRaoofuddin/Local-Whisper" target="_blank" class="btn-sm"><i class="fa-brands fa-github"></i> View Code</a>
